--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,11 +2,11 @@
 langchain
 langchain-community
 langchain-huggingface
-langchain-google-genai
+langchain-openai
 pydantic
 
 # LLM & Embeddings
-google-generativeai
+openai
 sentence-transformers
 huggingface-hub
 
